# elasmobranch

./: Database.hs  ElasmobranchMain.hs  Git.hs  Main.hs  README.md  Server.hs  elasmobranch.cabal  make_git_test.sh  run-elasmobranch-in-vsts.sh  vsts.sh
executables/elasmobranch-matrix/: Main.hs
