name:                elasmobranch
version:             0.0.0.0

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     ElasmobranchMain,
                       Server,
                       Git
  build-depends:
    base,
    containers,
    directory,
    happstack-server,
    happstack-lite,
    process,
    streaming,
    temporary

  default-language:    Haskell2010
